# PayDance

./: .editorconfig  .gitignore  .gitleaks.toml  .prettierignore  .prettierrc.json  CHANGELOG.md  CHANGELOG_EN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_EN.md  DESIGN.md  LICENSE  NOTICE.md  PRODUCT.md  README.md  README_EN.md  ROADMAP.md  ROADMAP_EN.md  SECURITY.md  SECURITY_EN.md  SUPPORT.md  SUPPORT_EN.md  TRADEMARK.md  TRADEMARK_EN.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  renovate.json
docs/: CONTRIBUTING_EN.md  DESIGN.md  FAQ.md  FAQ_EN.md  GOVERNANCE.md  MAINTAINERS.md  MAINTENANCE.md  PRODUCT.md  README_EN.md  ROADMAP.md  ROADMAP_EN.md  SECURITY_EN.md  SUPPORT.md  SUPPORT_EN.md  desktop-smoke-checklist.md  desktop-smoke-checklist_EN.md  web-preview-qa.md  web-preview-qa_EN.md
en/: index.html
legal/: ADDITIONAL_TERMS.md  ADDITIONAL_TERMS_EN.md  BRAND-ASSETS.md  BRAND-ASSETS_EN.md  CLA.md  LEGAL.md  LEGAL_EN.md  NOTICE.md  NOTICE_EN.md  THIRD_PARTY_NOTICES.md  TRADEMARK.md  TRADEMARK_EN.md
public/: robots.txt  sitemap.xml
scripts/: assert-build-boundary.mjs  assert-build-boundary.test.js  assert-build-target.mjs  assert-build-target.test.js  build-latest-json.test.js  check-brand-hygiene.mjs  check-brand-hygiene.ps1  check-secrets.mjs  check-secrets.ps1  ci-change-scope.mjs  ci-change-scope.test.js  ci-workflow.test.js  dev-encoding.test.js  ensure-release-unlocked.ps1  ensure-version-consistency.mjs  push-workflow.mjs  (+12 more)
src-tauri/: Cargo.toml  build.rs  deny.toml  single-instance.test.js  tauri.conf.json  window-chrome.test.js  workflow-cache.test.js
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs
(+155 files in other folders)
