[package]
name = "salary-ticker"
version = "0.5.2"
description = "高级牛马工资实时计算器"
authors = ["Codex"]
license = ""
repository = "https://github.com/MasterBao66/Labor-Wage-Live-Calc"
edition = "2021"

[lib]
name = "salary_ticker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
