[package]
name = "pay-dance"
version = "0.5.5"
description = "薪跳 · 桌面实时薪资仪表盘"
authors = ["Codex"]
license = ""
repository = "https://github.com/MasterBao66/PayDance"
edition = "2021"

[lib]
name = "pay_dance_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
