[package]
name = "pay-dance"
version = "0.8.1"
description = "薪跳 · 桌面实时薪资仪表盘"
authors = ["Mr.Baober"]
license-file = "../LICENSE"
repository = "https://github.com/MasterBao66/PayDance"
edition = "2021"

[lib]
name = "pay_dance_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2.5.4"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
